--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@line/bot-sdk": "^10.2.0",
+    "@supabase/supabase-js": "^2.58.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0"
   }
